# UAV_SAR_UpperMonitor

./: .gitignore  CMakeLists.txt  README.md  UAV_SAR_UpperMonitor_qml_module_dir_map.qrc  main.cpp  qmldir
FluentUI/action-cli/: InstallerScript.iss
FluentUI/example/: Version.h  example_en.ts  example_zh.ts
build-FluentUI-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
build-FluentUI-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/example/.rcc/: example_raw_qml_0.qrc  qmake_example.qrc
build-FluentUI-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/example/example/: qmldir
build-FluentUI-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/src/.rcc/: fluentuiplugin_raw_qml_0.qrc  qmake_FluentUI.qrc
cfg/: radar.json  radar1.json  set.ipynb
qml/: App.qml
qml/component/: ParameterInputBox.qml
qml/global/: Cfg.qml  ItemsFooter.qml  ItemsOriginal.qml  qmldir
qml/page/: CameraPage.qml  CameraPage1.qml  ConfigPage.qml  HomePage.qml  ProcessPage.qml  SettingsPage.qml
qml/page/configuration/: camera_parameters.qml  communication_parameters.qml  file_parameters.qml  radar_parameters.qml
qml/viewmodel/: CfgCommViewModel.qml  CfgRadarViewModel.qml
qml/window/: MainWindow.qml  PageWindow.qml  SettingsWindow.qml
source/: CMakeLists.txt  UAV_SAR_UpperMonitor_en_US.ts  UAV_SAR_UpperMonitor_zh_CN.ts  main.cpp  qml.qrc  update_qrc.py
source/cfg/: cf.json  communication.json  mmwaveconfig.json  radar.json  radar2.json
source/qml/: App.qml
source/qml/component/: ParameterComboBox.qml  ParameterInputBox.qml  ParameterSpinBox.qml
source/qml/global/: ItemsFooter.qml  ItemsOriginal.qml  Lang.qml
source/qml/page/: ConfigPage.qml  HomePage.qml  RecordPage.qml  SettingsPage.qml
source/qml/page/configuration/: camera_parameters.qml  communication_parameters.qml  radar_parameters.qml
source/qml/viewmodel/: CfgCommViewModel.qml  CfgRadarViewModel.qml
source/qml/window/: MainWindow.qml  PageWindow.qml
source/src/: AppInfo.cpp
source/src/component/: CircularReveal.h
source/src/helper/: InitalizrHelper.h  SettingsHelper.h  TranslateHelper.h
src/: Version.h  main.cpp
src/component/: paralist.cpp  paralist.h  paralistmodel.cpp  paralistmodel.h
src/helper/: Log.cpp
